Fix css issue where username and gravatar are too close in user index and user's microposts

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -255,6 +255,9 @@ input {
         overflow: auto;
         padding: 10px 0;
         border-bottom: 1px solid $gray-medium-light;
+        .gravatar {
+            padding-right: 5px;
+        }
     }
 }
 
